Setup RBAC
Make applications scoped to projects, just in case we want to provide
anything specific to a project within an organization.  Add in RBAC
protection for the API.
